--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+
+# macOS thumbnails
+Icon
+
+# macOS directory metadata
+.Spotlight-V100
+.Trashes
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
