Add initial project structure for ARC MeshChop, including configuration files, CLI interface, and foundational modules for data handling, model training, and evaluation. Introduce pre-commit hooks for code quality checks and establish CI workflow for automated testing and linting.

--- a/.gitignore
+++ b/.gitignore
@@ -224,3 +224,30 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# =============================================================================
+# ARC MeshChop Project-Specific
+# =============================================================================
+
+# Data (large files)
+data/raw/
+data/processed/
+*.nii
+*.nii.gz
+*.mgz
+
+# Model checkpoints
+checkpoints/
+*.pt
+*.pth
+*.ckpt
+*.onnx
+
+# Logs
+logs/
+tensorboard/
+
+# Secrets
+.env.local
+*.pem
+*.key
