Enhance cross-platform support for ARC MeshChop by adding device detection utilities and updating training configurations. Introduce automatic device selection for CUDA, MPS, and CPU, and adjust mixed precision handling accordingly. Update documentation to reflect new features and clarify platform-specific behaviors, including data loading optimizations and model export considerations for Mac. Ensure compatibility with recent PyTorch versions and improve overall usability across different environments.

--- a/configs/training/default.yaml
+++ b/configs/training/default.yaml
@@ -23,7 +23,7 @@ loss:
 # Training settings (FROM PAPER)
 epochs: 50
 batch_size: 1
-precision: 16  # FP16 mixed precision
+precision: 16  # FP16 mixed precision (CUDA only; MPS/CPU auto-fallback to FP32)
 
 # Cross-validation (FROM PAPER)
 cv:
