--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,10 @@ classifiers = [
 
 dependencies = [
     # Core ML
-    "torch>=2.0.0",
-    "torchvision>=0.15.0",
+    # NOTE: torch>=2.4.0 required for torch.amp.GradScaler(device, ...) API
+    # Earlier versions only support torch.cuda.amp.GradScaler()
+    "torch>=2.4.0",
+    "torchvision>=0.19.0",  # Matches torch 2.4+
 
     # Medical imaging
     "nibabel>=5.0.0",
@@ -57,8 +59,11 @@ dependencies = [
     "hydra-core>=1.3.0",
     "omegaconf>=2.3.0",
 
-    # Hyperparameter optimization
-    "orion>=0.2.7",
+    # Hyperparameter optimization (Phase 4)
+    # NOTE: orion>=0.2.7 removed from core deps - broken on Python 3.12
+    # (uses deprecated configparser.SafeConfigParser removed in 3.12)
+    # Use optuna instead, or install orion manually with Python 3.10/3.11
+    "optuna>=3.5.0",
 
     # Logging & tracking
     "tensorboard>=2.14.0",
@@ -210,7 +215,7 @@ exclude = [
 module = [
     "nibabel.*",
     "monai.*",
-    "orion.*",
+    "optuna.*",
     "hydra.*",
     "omegaconf.*",
     "tensorboard.*",
