--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,8 +43,9 @@ dependencies = [
     "monai>=1.3.0",
 
     # HuggingFace datasets for ARC data access
-    # NOTE: neuroimaging-go-brrrr git dependency removed due to submodule issues
-    # We implement our own data loading from hugging-science/arc-aphasia-bids
+    # neuroimaging-go-brrrr v0.2.1 provides BIDS/NIfTI utilities on top of HuggingFace datasets
+    # Import from bids_hub module: from bids_hub.datasets.arc import ...
+    "neuroimaging-go-brrrr @ git+https://github.com/The-Obstacle-Is-The-Way/neuroimaging-go-brrrr.git@v0.2.1",
     "datasets>=3.4.0",
     "huggingface-hub>=0.32.0",
 
@@ -125,6 +126,9 @@ Issues = "https://github.com/username/arc-meshchop/issues"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/arc_meshchop"]
