refactor: Integrate bids_hub for ARC validation constants
Implementation:
- Import ARC_VALIDATION_CONFIG from bids_hub.validation.arc for full
  dataset counts (230 subjects, 902 sessions, 447 t2w)
- Log bids_hub expected counts for context when loading dataset
- Add bids_hub to mypy ignore_missing_imports (no type stubs)

Spec fixes (based on senior analysis):
- local-01: Remove get_arc_features from imports (not needed for
  consumption), add parity-critical behaviors section, clarify count
  distinction (ARC_VALIDATION_CONFIG vs paper 224 subset)
- 03-data-pipeline: Remove build_arc_file_table from import (that's
  for UPLOAD, not consumption), add clarifying note
- FIX-001: Update imports section to match actual implementation

Test updates:
- Replace obsolete test_imports_datasets_library (impossible scenario
  since bids_hub ensures datasets is installed) with
  test_bids_hub_import_available

All 276 tests pass. CI green.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -232,6 +232,9 @@ module = [
     "datasets.*",
     "huggingface_hub",
     "huggingface_hub.*",
+    # bids_hub (neuroimaging-go-brrrr, no stubs)
+    "bids_hub",
+    "bids_hub.*",
     # Export dependencies (Spec 06)
     "onnxruntime",
     "onnxruntime.*",
