feat: track experiment results in git (MeshNet checkpoints are small)
- Remove *.pt from gitignore (MeshNet-26 = 1.7MB per checkpoint)
- Increase pre-commit large file limit to 2MB for checkpoints
- Add first completed run: fold_0_restart_0
  - Test DICE: 0.667 (mean), 0.771 (median)
  - 75 test subjects, 8 complete failures dragging down mean
  - Duration: 63.5 hours on MPS

30 total runs will be ~51MB - acceptable for reproducibility.
Paper reports 0.876 DICE averaged across all 30 runs.

--- a/.gitignore
+++ b/.gitignore
@@ -237,12 +237,15 @@ data/arc/
 *.nii.gz
 *.mgz
 
-# Model checkpoints
+# Model checkpoints (ad-hoc)
 checkpoints/
-*.pt
 *.pth
 *.ckpt
 *.onnx
+
+# Experiment results are tracked (small due to MeshNet's 147K params)
+# experiments/ folder contains ~1.7MB per run (final.pt + results.json)
+# Total: 30 runs × 1.7MB ≈ 51MB - acceptable for reproducibility
 
 # Logs
 logs/
