--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
       - id: check-json
       - id: check-toml
       - id: check-added-large-files
-        args: ['--maxkb=1000']
+        args: ['--maxkb=2000']  # MeshNet checkpoints are ~1.7MB
       - id: check-merge-conflict
       - id: debug-statements
       - id: detect-private-key
